--- a/jblog04/src/main/webapp/WEB-INF/web.xml
+++ b/jblog04/src/main/webapp/WEB-INF/web.xml
@@ -11,8 +11,13 @@
 	</listener>
 
 	<context-param>
+		<param-name>contextClass</param-name>
+		<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+		</param-value>
+	</context-param>
+	<context-param>
 		<param-name> contextConfigLocation </param-name>
-		<param-value>/WEB-INF/applicationContext.xml</param-value>
+		<param-value>com.poscoict.jblog.config.AppConfig</param-value>
 	</context-param>
 
 	<!-- Encoding Filter -->
