--- a/jblog04/src/main/webapp/WEB-INF/web.xml
+++ b/jblog04/src/main/webapp/WEB-INF/web.xml
@@ -51,8 +51,13 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
 		<init-param>
+			<param-name>contextClass</param-name>
+			<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+			</param-value>
+		</init-param>
+		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring-servlet.xml</param-value>	<!-- 기본 설정과 동일 (servletname-servlet) -->
+			<param-value>com.poscoict.jblog.config.WebConfig</param-value>
 		</init-param>
 	</servlet>
 
